--- a/Basics_Kotlin/TabLayout_ViewPager2/app/src/main/AndroidManifest.xml
+++ b/Basics_Kotlin/TabLayout_ViewPager2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FragmentLayout"
+        android:theme="@style/Theme.TabLayout_ViewPager2"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
